<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textViewShopTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="19dp"        
	    android:gravity="center"
        android:text="@string/ConfigDetailTitle"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    
    <LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:gravity="center"
	    android:layout_marginTop="20dp"
	    android:orientation="horizontal" >
	    
	    <TextView
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:text="@string/mobile_phone_number"
	        android:textAppearance="?android:attr/textAppearanceMedium" />
	
	    <TextView
	        android:id="@+id/textViewPhoneNumber"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:text="@string/sample_number"
	        android:textAppearance="?android:attr/textAppearanceMedium" />
	        
    </LinearLayout>
    
    <!-- IP -->
    <LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:gravity="center"
	    android:layout_marginTop="10dp"
	    android:orientation="horizontal" >
	    
	    <TextView
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:text="@string/IP"
	        android:textAppearance="?android:attr/textAppearanceMedium" />
	
	    <EditText
	        android:id="@+id/editTextShopIP"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="2"
	        android:ems="10"
	        android:inputType="text" />

    </LinearLayout>
    
    <!-- PORT -->
    <LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:gravity="center"
	    android:layout_marginTop="10dp"
	    android:orientation="horizontal" >
	    
	    <TextView
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:text="@string/port"
	        android:textAppearance="?android:attr/textAppearanceMedium" />
	
	    <EditText
	        android:id="@+id/editTextShopPort"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="2"
	        android:ems="10"
	        android:inputType="text" />
	    
    </LinearLayout>
    
    
    <!-- Pos ID -->
    <LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:gravity="center"
	    android:layout_marginTop="10dp"
	    android:orientation="horizontal" >
	    
	    <TextView
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:text="@string/PosID"
	        android:textAppearance="?android:attr/textAppearanceMedium" />
	<!--  
	    <EditText
	        android:id="@+id/editTextPosID"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="2"
	        android:ems="10"
	        android:inputType="text" />-->
	    
	    <Spinner
	        android:id="@+id/spinnerPosID"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:entries="@array/group_type"
	        android:prompt="@string/choose_default_group_type"
	        android:textSize="14sp" />
    </LinearLayout>
    
    <CheckBox
        android:id="@+id/checkBoxAutoLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:text="@string/auto_login" />
    
    
    <!-- ID -->
    <LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:gravity="center"
	    android:layout_marginTop="10dp"
	    android:orientation="horizontal" >
	    
	    <TextView
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:text="@string/ID"
	        android:textAppearance="?android:attr/textAppearanceMedium" />
	    
	    <EditText
	        android:id="@+id/editTextID"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="2"
	        android:paddingLeft="10dp"
	        android:paddingRight="10dp"
	        android:ems="10"
	        android:background="@drawable/white_text_box_small"
	        android:textColor="#000000"
	        android:inputType="text" />
    </LinearLayout>
    
    
    <!-- PW -->
    <LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:gravity="center"
	    android:layout_marginTop="10dp"
	    android:orientation="horizontal" >
	    
	    <TextView
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:text="@string/PW"
	        android:textAppearance="?android:attr/textAppearanceMedium" />

	    <EditText
	        android:id="@+id/editTextPW"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="2"
	        android:paddingLeft="10dp"
	        android:paddingRight="10dp"
	        android:ems="10"
	        android:background="@drawable/white_text_box_small"
	        android:textColor="#000000"
	        android:inputType="textPassword" />
    </LinearLayout>
    
    <requestFocus />

    <LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:gravity="center"
	    android:layout_marginTop="10dp"
	    android:padding="10dp"
	    android:orientation="horizontal" >
	    
	    <Button
	        android:id="@+id/buttonCancel"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:layout_marginRight="10dp"
	        android:background="@drawable/contact_btn_cancel" />
	
	    <Button
	        android:id="@+id/buttonSave"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:background="@drawable/contact_btn_save" />
	    
    </LinearLayout>

</LinearLayout>